Fixed alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -337,6 +337,8 @@ body{
     display: flex;
     justify-content: space-evenly;
     padding:40px 0;
+    width:80%;
+    margin:0 auto;
 }
 
 .input-field {
